add padding from bootstrap.css

--- a/media-query-site.html
+++ b/media-query-site.html
@@ -7,6 +7,7 @@
     <title>Media Queries</title>
   </head>
   <body>
+  <div class="container">
     <h1>Media Queries</h1>
     <div class="column">
       <p>Media queries allow us to make our sites <em>responsive</em>. We can use media queries to apply CSS styling only when certain conditions apply. For instance, our sites can look different depending on the size of the screen, or <em>viewport</em> a user is viewing our content with. We can also change the way our site appears if a user is printing our website, or using a screen-reader! </p>
@@ -17,5 +18,6 @@
     <div class="column">
       <p>Are you beginning to see the possibilities here? Media queries are awesome!</p>
     </div>
+  </div>
   </body>
 </html>
